==============
lxml changelog
==============

Latest changes
==============

Features added
--------------

* LP#1341964: The soupparser now handles DOCTYPE declarations, comments
  and processing instructions outside of the root element.
  Patch by Olli Pottonen.

* LP#1421512: The ``docinfo`` of a tree was made editable to allow
  setting and removing the public ID and system ID of the DOCTYPE.
  Patch by Olli Pottonen.

Bugs fixed
----------

* LP#1421921: Comments/PIs before the DOCTYPE declaration were not
  serialised.  Patch by Olli Pottonen.

* LP#659367: Some HTML DOCTYPE declarations were not serialised.
  Patch by Olli Pottonen.

* LP#1238503: lxml.doctestcompare is now consistent with stdlib's doctest
  in how it uses ``+`` and ``-`` to refer to unexpected and missing output.

* Empty prefixes are explicitly rejected when a namespace mapping is used
  with ElementPath to avoid hiding bugs in user code.


3.4.3 (?)
==================

Bugs fixed
----------

* LP#1421927: DOCTYPE system URLs were incorrectly quoted when containing
  double quotes.  Patch by Olli Pottonen.

* LP#1419354: meta-redirect URLs were incorrectly processed by
  ``iterlinks()`` if preceded by whitespace.


3.4.2 (2015-02-07)
==================

Bugs fixed
----------

* LP#1415907: Crash when creating an XMLSchema from a non-root element
  of an XML document.

* LP#1369362: HTML cleaning failed when hitting processing instructions
  with pseudo-attributes.

* ``CDATA()`` wrapped content was rejected for tail text.

* CDATA sections were not serialised as tail text of the top-level element.


3.4.1 (2014-11-20)
==================

Features added
--------------

* New ``htmlfile`` HTML generator to accompany the incremental ``xmlfile``
  serialisation API.  Patch by Burak Arslan.

Bugs fixed
----------

* ``lxml.sax.ElementTreeContentHandler`` did not initialise its superclass.


3.4.0 (2014-09-10)
==================

Features added
--------------
